src/objects/Call_information__c.object
<CustomObject>
    <description>CTI incoming call history</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Call Information</relationshipLabel>
        <relationshipName>Call_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CallType__c</fullName>
        <defaultValue>&quot;PHONE&quot;</defaultValue>
        <label>種類</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Time__c</fullName>
        <label>Call Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CarColor__c</fullName>
        <label>色</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CarModel__c</fullName>
        <label>車種</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>Account.Name field. This is created as Account.Name is not accessible through streaming api push topic</description>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_KatakanaCal__c</fullName>
        <formula>Contact__r.Katakana__c</formula>
        <label>ひらがな</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <description>Contact.Name. This is created as Contact.Name is not directly accessible through Streaming API push topic query.</description>
        <formula>Contact__r.LastName &amp; &quot; &quot; &amp; Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Call Information</relationshipLabel>
        <relationshipName>Call_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DNO__c</fullName>
        <label>DNO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT0__c</fullName>
        <label>DT0</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT1__c</fullName>
        <label>DT1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT4__c</fullName>
        <label>DT4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImgHex64Info__c</fullName>
        <label>画像情報</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsCustomerUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCustomerUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsNotNotifyCarInfomationCal__c</fullName>
        <formula>Contact__r.IsNotNotifyCarInfomation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>自動車ナンバー通知投稿対象外</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LNO__c</fullName>
        <label>LNO</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MessageUUID__c</fullName>
        <label>MessageUUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAM__c</fullName>
        <label>NAM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Matching_Customers__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No. of Matching Customers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSN_Code__c</fullName>
        <description>This field is used to store the next character of RSN from cti type 2 dat file</description>
        <label>RSN_Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SNO__c</fullName>
        <label>SNO</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isDCD1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDCD1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isRSNP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isRSNP</label>
        <type>Checkbox</type>
    </fields>
    <label>Call information</label>
    <nameField>
        <displayFormat>CI-{0000}</displayFormat>
        <label>Call information名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>